# ros2bag_triggered

./: .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: cmake-single-platform.yml
config/: config.yaml  parameters.yaml  topic_config.yaml
examples/: README.md  battery_health_trigger.cpp  joint_effort_trigger.cpp  main.cpp  navsat_invalid_fix_trigger.cpp  pose_covariance_trigger.cpp  velocity_trigger.cpp  zone_trigger.cpp  zone_trigger_with_navsat_fix.cpp  zone_trigger_with_pose_stamped.cpp
include/examples/: battery_health_trigger.hpp  empty_trigger.hpp  joint_effort_trigger.hpp  navsat_invalid_fix_trigger.hpp  zone_trigger.hpp  zone_trigger_with_navsat_fix.hpp  zone_trigger_with_pose_stamped.hpp
include/ros2bag_triggered/: trigger_base.hpp  trigger_plotter.hpp  trigger_variant_visitors.hpp  triggered_recorder_node.hpp  triggered_writer.hpp  type_traits.hpp
include/test/: test_helpers.hpp
ros2bag_triggered/: .clang-format  CMakeLists.txt  package.xml
ros2bag_triggered/config/: topic_config.yaml
ros2bag_triggered/include/ros2bag_triggered/: message_type_registry.hpp  trigger_base.hpp  trigger_plotter.hpp  trigger_utils.hpp  trigger_variant_visitors.hpp  triggered_recorder_node.hpp  triggered_writer.hpp  type_traits.hpp
ros2bag_triggered/include/test/: test_helpers.hpp
ros2bag_triggered/src/: triggered_writer.cpp
ros2bag_triggered/test/: trigger_base_tests.cpp  triggered_recorder_node_tests.cpp  triggered_writer_tests.cpp
ros2bag_triggered/test/configs/config_with_extra_triggers/: topic_config.yaml  writer_config.yaml
ros2bag_triggered/test/configs/config_with_missing_triggers/: topic_config.yaml
ros2bag_triggered/test/configs/config_with_wrong_field_types/: topic_config.yaml  writer_config.yaml
ros2bag_triggered/test/configs/incomplete_config/: topic_config.yaml  writer_config.yaml
ros2bag_triggered/test/configs/valid_config/: writer_config.yaml
ros2bag_triggered_examples/: CMakeLists.txt  README.md  package.xml
ros2bag_triggered_examples/include/ros2bag_triggered_examples/: battery_health_trigger.hpp  joint_effort_trigger.hpp  navsat_invalid_fix_trigger.hpp  pose_covariance_trigger.hpp  velocity_trigger.hpp  zone_trigger_with_navsat_fix.hpp  zone_trigger_with_pose_stamped.hpp
ros2bag_triggered_examples/src/: battery_health_trigger.cpp  joint_effort_trigger.cpp  main.cpp  navsat_invalid_fix_trigger.cpp  pose_covariance_trigger.cpp  velocity_trigger.cpp  zone_trigger_with_navsat_fix.cpp  zone_trigger_with_pose_stamped.cpp
ros2bag_triggered_tester/: README.md  package.xml  setup.cfg  setup.py
ros2bag_triggered_tester/ros2bag_triggered_tester/: dummy_battery_health_trigger.py  dummy_joint_effort_trigger.py  dummy_navsat_fix_zone_trigger.py  dummy_navsat_invalid_fix_trigger.py  dummy_pose_covariance_trigger.py  dummy_pose_stamped_zone_trigger.py  dummy_trigger_display.py  dummy_triggers_tester.py  dummy_velocity_trigger.py  trigger_tester.py
src/: triggered_recorder_node.cpp  triggered_writer.cpp
test/: trigger_base_tests.cpp  triggered_recorder_node_tests.cpp  triggered_writer_tests.cpp
test/configs/config_with_invalid_trigger_names/: topic_config.yaml
test/configs/config_with_missing_writer_fields/: topic_config.yaml
test/configs/incomplete_config/: writer_config.yaml
test/configs/valid_config/: topic_config.yaml  writer_config.yaml
test_utils/: battery_state_publisher.py  nav_publisher.py  nav_sat_fix_publisher.py
