<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2bag_triggered</name>
  <version>0.0.1</version>
  <description>A collection of helper classes for ros2bag focused mainly at providing triggering functionality with ros2bags</description>
  <maintainer email="saadehmd@gmail.com">Saad Ahmad</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>rosbag2_transport</depend>
  <depend>rosbag2</depend>
  <depend>ros_graph_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_gtest</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>matplotlib</exec_depend>
 
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_lint_common</test_depend> 

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
